--- a/trunk/chapter01.tex
+++ b/trunk/chapter01.tex
@@ -11,7 +11,7 @@ In this document we are mainly concerned about driving assistance systems. Such 
 Driving support system may also provide support in a less passive manner as well:
 
 \begin{itemize}
-\item change how the car respond to the drivers commands for assisting a manoeuver
+\item change how the car respond to the drivers commands for assisting a maneuver
 \item change how the car behaves, with partial or fully automatic command
 \end{itemize}
 
@@ -33,11 +33,11 @@ A more modern approach of driving support system has appeared: Advanced Driver A
 
 ADAS relies in computerized systems to process informations provided by the car (through sensors) to improve the user experience. 
 
-\textbf{ADAS} is splitted in different research branches, each of them with its own applications and goals. Among those different branches (Figure \ref{fig:sensor:target}), our work will concentrate in applications situated in \textbf{Safety} branch. 
+\textbf{ADAS} is split in different research branches, each of them with its own applications and goals. Among those different branches (Figure \ref{fig:sensor:target}), our work will concentrate in applications situated in \textbf{Safety} branch. 
 
 The goal of this work is to tackle a very common issue in safety application (object classification) and \textbf{not} develop an application.
 
-This will be done by providing a theorerical framework to classify the environment in a high level manner, separating static and dynamic objects with the information acquired from the sensors.
+This will be done by providing a theoretical framework to classify the environment in a high level manner, separating static and dynamic objects with the information acquired from the sensors.
 
 \begin{figure}[h]
 \centering
@@ -76,7 +76,7 @@ This scheme is as important to robotics as for they are for human being. In orde
 
 Sensors do not perform action. They are the means in which complex systems acquire information about the environment. Although, the sensors play a key role in almost every systems, they are closer to the hardware layer (Figure \ref{fig:sensors:role}), meaning that it is not they role to process information, only acquire them. 
 
-The sensors are normally incapable to respond to external stimulus without a system to provess the data provided by it, and act. The system reacts to the sensor stimulus through other means.
+The sensors are normally incapable to respond to external stimulus without a system to process the data provided by it, and act. The system reacts to the sensor stimulus through other means.
 
 Thus, a sensor is responsible for the data acquisition (electric interpretation of a physical stimulus). This data is directed to a perception layer which is allocated in an upper layer, which will be responsible to take the decisions.
 
@@ -117,9 +117,9 @@ Before talking about perception, it is necessary to comprehend few concepts. Tho
 
 Localization provides the coordinates of a point with respect to a another point, known as frame reference. If this frame of reference is the earth, for instance, we call it global frame of reference. In robotics, depending on the application of the robot we can have different frames of reference. We can use a building as frame of reference, by indicating the position of the robot inside a specific building. The robot's position may be given in a global reference of frame, meaning that wherever the robot is located in the earth globe, we can provide a coordinate to represent its position. 
 
-The result of mapping, as general knowledge, gives us information about a region. It represents the action of recording the disposition of the static objects of a region. This representation can be used later for exploration purpose. In a geological map the static objects are rivers, montains, canyons, etc. 
+The result of mapping, as general knowledge, gives us information about a region. It represents the action of recording the disposition of the static objects of a region. This representation can be used later for exploration purpose. In a geological map the static objects are rivers, mountains, canyons, etc. 
 
-Localization and Mapping are really important tools for a robot, but they insuficient in case of existing moving objects sharing the same environment with the robot. This is due to the risk of collition between the moving objects and the robot, for this reason its necessary to detect (be aware of the existance of such object) and track (know its motion model) the object.
+Localization and Mapping are really important tools for a robot, but they insufficient in case of existing moving objects sharing the same environment with the robot. This is due to the risk of collision between the moving objects and the robot, for this reason its necessary to detect (be aware of the existence of such object) and track (know its motion model) the object.
 
 By putting these concepts together, imagine the following situation: we have a map in our hands (provided by the environment \textit{mapping}) and we know exactly where we are in this map (by \textit{localization}), what would be the result of moving in this environment blind folded? Not good.
 
@@ -150,9 +150,7 @@ Thus, \textbf{inertia} plays a key role in how reliable the robot movements are.
 
 All those variations bring an imprecision factor into the movement performed by a robot. This because those properties determine the resistance of the robot in changing its speed.
 
-From the probabilistic point of view, this implies in estimate the joint probability distribution (Equation \ref{jpd:discrete}). Where the $u$ represents the observations and $z$ the measurements.
-
-Thus, the output of the SLAM process is the robot pose and a map of the stationary objects captured by the \textit{perception} sensors \cite{iyengar1991autonomous}.
+The output of the SLAM process is the robot state and a map of the stationary objects, respectively $x$ and $M$ in the Figure~\ref{fig:perception:slam}, captured by the \textit{perception} sensors \cite{iyengar1991autonomous}.
 
 \subsubsection{Formalization}
 
@@ -363,7 +361,7 @@ As we saw in certain level of details the meaning of risk, we can understand the
 
 The \textbf{assessment} is the action of studying what variations can affect the subject, this variation can be \textbf{direct} or \textbf{indirect} as well.
 
-A didatic example to illustrate the \textbf{direct} and \textbf{indirect} situations: imagine you bought a very good amount of shares from Apple Inc\copyright. But you forgot that its products are manufactured in an Asian country. Suddenly this Asian country government announces that it is forbidden to export any kind of product to western countries. 
+A didactic example to illustrate the \textbf{direct} and \textbf{indirect} situations: imagine you bought a very good amount of shares from Apple Inc\copyright. But you forgot that its products are manufactured in an Asian country. Suddenly this Asian country government announces that it is forbidden to export any kind of product to western countries. 
 
 Well, needless to say that you are bankrupt. Something that was not directly related - international diplomacy relations - to your subject can affect dramatically its value. We can refer to the subject as assets, or future assets.
 
@@ -373,4 +371,4 @@ Risk assessment applied in ADAS is generally done to evaluate the risk of collis
 
 This is done by perceiving the environment, specifically the dynamic environment. The dynamic environment is chosen to be studied rather than static due to its close relationship with  collisions situations. 
 
-The collisions can be caused by several factors, but commonly other vehicles sharing the same space are responsible for a big part of the collisions, the study \cite{Hurt_1981} showed statistically that $75\%$ of collitions are between two vehicles, and only $22\%$ are vehicles coliding with static objects. Therefore, the relationship among dynamic objects are important for the risk assessment.
+The collisions can be caused by several factors, but commonly other vehicles sharing the same space are responsible for a big part of the collisions, the study \cite{Hurt_1981} showed statistically that $75\%$ of collisions are between two vehicles, and only $22\%$ are vehicles in collision with other objects. Therefore, the relationship among dynamic objects are important for the risk assessment.
